--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -13,8 +13,7 @@
         {% endblock styles %}
         
         
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        
     </head>
     <body>
         <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
@@ -30,11 +29,14 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        
-                        <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
-                        <li><a href="#"><i class="fa fa-sign-out"></i> Log Out</a></li>
-                        <li><a href="#"><i class="fa fa-user-plus"></i> Register</a></li>
-                        <li><a href="#"><i class="fa fa-sign-in"></i> Log In</a></li>
+                        {% if user.is_authenticated %}
+                        <li><a href="{% url 'blog_home' %}"><i class="fa fa-user"></i> Blog</a></li>
+                        <li><a href="{% url 'profile' %}"><i class="fa fa-user"></i> Profile</a></li>
+                        <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Log Out</a></li>
+                        {% else %}
+                        <li><a href="{% url 'register' %}"><i class="fa fa-user-plus"></i> Register</a></li>
+                        <li><a href="{% url 'login' %}"><i class="fa fa-sign-in"></i> Log In</a></li>
+                        {% endif %}
                         
                     </ul>
                 </div>
@@ -44,5 +46,10 @@
         <div class="container">
             {% block content %} {% endblock %}
         </div>
+        <footer>
+            <div class="container">
+                <p>Made by Code Institute bootcampers</p>
+            </div>
+        </footer>
     </body>
 </html>
