--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -1,9 +1,14 @@
 body {
     font-family: Arial;
-    padding-top: 50px;
+    padding-top: 80px;
 }
 
 
 legend {
     padding-top: 20px;
 }
+
+table {
+    padding-top: 20px;
+}
+
