--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -46,9 +46,12 @@
         <div class="container">
             {% block content %} {% endblock %}
         </div>
+        <hr>
         <footer>
             <div class="container">
+                {% block footer %} 
                 <p>Made by Code Institute bootcampers</p>
+                {% endblock %}
             </div>
         </footer>
     </body>
