Production and local settings

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -4,4 +4,10 @@
 
 
 <h1>Blog Home Page</h1>
+<table>
+    <tr class="blog_title">
+        <td><a href="{% url 'post_list' %}" class="btn btn-success btn-sm btn-block" role="button"><i class="glyphicon glyphicon-resize-full"></i>View Blogs</a></td>
+    </tr>
+</table>
+
 {% endblock %}
