--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -42,7 +42,15 @@
                 </div>
             </div>
         </nav>
-        
+        {% if messages %}
+        <div class="alert alert-success">
+            <div class="messages">
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            </div>
+        </div>
+        {% endif %}
         <div class="container">
             {% block content %} {% endblock %}
         </div>
