--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,32 +2,35 @@
 {% load bootstrap_tags %}
 {% block content %}
 
+<div class="row">
+    <div class="col-md-2 col-sm-3 text-center">
+        <a class="story-img" href="#">
+            <img src="http://via.placeholder.com/100x100" style="width:100px; height: 100px; background-color: #12ABB2; color: #ffffff;" class="img-circle">
+        </a>
+    </div>
+    <div class="col-md-10 col-sm-9">
+        <h3>{{ post.title }}</h3>
+        <div class="row">
+            <div class="col-xs-9">
+                <p>{{ post.content }}</p>
+                <p>{{ post.published_date }} | <strong>Views</strong> {{ post.views }} | <strong>Tag</strong> {{ post.tag }}</p>
+                <p><img src="{{ MEDIA_URL }}{{post.image}}"/></p>
+            </div>
+        </div>
+    </div>
+    <hr>
+</div>
 
-
-<table>
-    <tr class="blog_title">
-       
-        <td><h2>{{ post.title }}</h2></td>
-    </tr>
-    <tr>
-        <td><br><div>{{ post.content }}</div></td>
-    </tr>
-    <tr>
-        <td><br><div>{{ post.tag }}</div></td>
-    </tr>
-    <tr>
-        <td><br><div>Number of views: {{ post.views }}</div></td>
-    </tr>
-    <tr>
-        <td><br><div>Author: {{ post.author }}</div></td>
-    </tr>
-    <tr>
-        <td><br><a href="{% url 'edit_post' post.id %}" class="btn btn-warning btn-sm btn-block" role="button"><i class="glyphicon glyphicon-edit"></i>Edit</a></td>
-    </tr>
-    <tr>
-        <td><br><a href="{% url 'post_list' %}" class="btn btn-success btn-sm btn-block" role="button"><i class="glyphicon glyphicon-resize-small"></i>Return</a></td>
-    </tr>
-</table>
+<br>
+<div class="row">
+    <div class="col-md-2 col-sm-3 text-center">
+        {% if post.author == request.user or request.user.is_superuser == True %}
+        <a href="{% url 'edit_post' post.id %}" class="btn btn-warning btn-sm btn-block" role="button"><i class="glyphicon glyphicon-edit"></i>Edit</a>
+        {% endif %}
+        <a href="{% url 'post_list' %}" class="btn btn-success btn-sm btn-block" role="button"><i class="glyphicon glyphicon-resize-small"></i>Return</a>
+        <a href="{% url 'delete_post' post.id %}" class="btn btn-danger btn-sm btn-block" role="button"><i class="glyphicon glyphicon-remove"></i>Delete</a>
+    </div>
+</div>
 {% endblock %}
 {% block footer %}
 {% endblock %}
