--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,31 +1,29 @@
-{% extends 'home/base.html' %}
-{% load bootstrap_tags %}
+{% extends "home/base.html" %}
+
 {% block content %}
-<hr>
-<table>
-    <tr class="blog_title">
-        <td><a href="{% url 'new_post' %}" class="btn btn-danger btn-sm btn-block" role="button"><i class="glyphicon glyphicon-edit"></i>New post</a></td>
-    </tr>
-</table>
-<hr>
-<table>
-    {% for blog in blogs %}
-    <tr class="blog_title">
-       
-        <td><h2>{{ blog.title }}</h2></td>
-    </tr>
-    <tr>
-        <td><div>{{ blog.content }}</div></td>
-      
-    </tr>
-    <tr>
-        
-        <td><br><a href="{% url 'post_detail' blog.id %}" class="btn btn-success btn-sm btn-block" role="button"><i class="glyphicon glyphicon-resize-full"></i>Read More</a></td>
-    </tr>
-    {% empty %}
-    <p>You have no blogs.</p>
+    <br>
+    {% if user.is_authenticated %}
+    <p><button class="btn btn-default" onclick="location.href='{% url 'create_post' %}'">New Post</button></p>
+    {% endif %}
+    <br>
+    {% for post in posts %}
+        <div class="row">
+            <div class="col-md-2 col-sm-3 text-center">
+                <a class="story-img" href="#">
+                    <img src="http://via.placeholder.com/100x100" style="width:100px; height: 100px; background-color: #12ABB2; color: #ffffff;" class="img-circle">
+                </a>
+            </div>
+            <div class="col-md-10 col-sm-9">
+                <h3>{{ post.title }}</h3>
+                <div class="row">
+                    <div class="col-xs-9">
+                        <p>{{ post.content|truncatewords:30 }}</p>
+                        <p><button class="btn btn-success" onclick="location.href='{% url 'post_detail' post.id %}'">Read More</button></p>
+                        <p>{{ post.published_date }} | <strong>Views</strong> {{ post.views }} | <strong>Tag</strong> {{ post.tag }}</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
     {% endfor %}
-
-</table>
-
 {% endblock %}
