--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,9 +12,14 @@
         <h3>{{ post.title }}</h3>
         <div class="row">
             <div class="col-xs-9">
-                <p>{{ post.content }}</p>
+                <p>{{ post.content|linebreaksbr}}</p>
                 <p>{{ post.published_date }} | <strong>Views</strong> {{ post.views }} | <strong>Tag</strong> {{ post.tag }}</p>
-                <p><img src="{{ MEDIA_URL }}{{post.image}}"/></p>
+                <p>
+                    {% if post.image %}
+                    <img src="{{ MEDIA_URL }}{{post.image}}"/>
+                    {% endif %}
+                    </p>
+                <strong>Views:</strong> {{ post.views }}
             </div>
         </div>
     </div>
